fix script order - filter page

--- a/node_bu/public/filters.html
+++ b/node_bu/public/filters.html
@@ -262,9 +262,6 @@
     </footer>
     <!-- End of Footer -->
 </div>
-<script src="https://unpkg.com/@descope/web-js-sdk@x.x.x/dist/index.umd.js"></script>
-<script src="js/auth.js" type="text/javascript"></script>
-
 <script crossorigin="anonymous" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
         type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
@@ -278,9 +275,11 @@
 <!-- Include Select2 CSS and JS -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+<script src="https://unpkg.com/@descope/web-js-sdk@x.x.x/dist/index.umd.js"></script>
 
-
+<script src="js/pub_env.js" type="text/javascript"></script>
 <script src="js/template.js" type="text/javascript"></script>
+<script src="js/auth.js" type="text/javascript"></script>
 <script src="js/filters.js" type="text/javascript"></script>
 </body>
 </html>
