fix script order - filter page

--- a/node_bu/public/settings.html
+++ b/node_bu/public/settings.html
@@ -172,6 +172,8 @@
                                 <button id="save-settings">Save</button>
                             </div>
                         </div>
+
+                        <div id="pov-data"></div>
                     </div>
                     <div id="user-management-container" class="col-md-9 col-sm-12" style="display: none">
                         <div class="row mt-3 mb-2">
