--- a/node_bu/public/filters.html
+++ b/node_bu/public/filters.html
@@ -120,8 +120,8 @@
 
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">Hi <span class="text-primary" id="user-name"></span> !</h4> <i
-                            class="bi bi-chat-text"></i>
+                        <h4 class="modal-title">Hi <span class="text-primary" id="user-name"></span>!</h4>
+<!--                        <i class="bi bi-chat-text"></i>-->
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
 
@@ -228,6 +228,9 @@
                                     </div>
                                 </div>
                             </div>
+                            <button type="button" class="btn btn-danger btn-sm remove-filter-btn" style="visibility: hidden;">
+                                <i class="bi bi-trash"></i>
+                            </button>
                         </form>
                         <button id="add-filter-btn" class="mb-2 btn btn-success" type="button">Add Filter</button>
                     </div>
