--- a/node_bu/public/questions.html
+++ b/node_bu/public/questions.html
@@ -119,7 +119,8 @@
 
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">Hi <span class="text-primary" id="user-name"></span> !</h4> <i class="bi bi-chat-text"></i>
+                        <h4 class="modal-title">Hi <span class="text-primary" id="user-name"></span>!</h4>
+<!--                        <i class="bi bi-chat-text"></i>-->
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
 
