--- a/icebergs.html
+++ b/icebergs.html
@@ -12,11 +12,11 @@
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg"/>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://fastly.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/main_view.css">
     <link rel="stylesheet" href="css/icebergs.css">
 </head>
@@ -251,11 +251,11 @@
         type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"
         type="text/javascript"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+<script src="https://fastly.jsdelivr.net/npm/chart.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
