--- a/settings.html
+++ b/settings.html
@@ -18,11 +18,11 @@
           rel="stylesheet" type="text/css">
     <link crossorigin="anonymous" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"
           rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/main_view.css">
     <link rel="stylesheet" href="css/settings.css">
 
@@ -213,16 +213,16 @@
         type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"
         type="text/javascript"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 <script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js"
         type="text/javascript"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://fastly.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="js/template.js"></script>
 <script src="js/auth.js"></script>
 <script src="js/settings.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/@descope/user-management-widget/dist/index.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/@descope/user-management-widget/dist/index.js"></script>
 
 </body>
 </html>
