--- a/node_bu/public/questions.html
+++ b/node_bu/public/questions.html
@@ -66,13 +66,13 @@
                     Questions
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="impacts-nav-btn"
-                        data-target="outliers"
+                        data-target="impacts"
                         data-toggle="tooltip" data-placement="bottom" title="Impacts">
                     <i class="bi bi-clipboard-data text-success"></i>
                     Impacts
                 </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
-                        data-target="icebergs"
+                <button type="button" class="btn btn-sm text-white m-1" id="hazards-nav-btn"
+                        data-target="hazards"
                         data-toggle="tooltip" data-placement="bottom" title="Hazardous">
                     <i class="bi bi-exclamation-triangle text-danger"></i>
                     Hazardous
