remove filterId from localhost

--- a/node_bu/public/settings.html
+++ b/node_bu/public/settings.html
@@ -193,7 +193,7 @@
 <script src="js/auth.js"></script>
 <script src="js/settings.js"></script>
 
-<script src="https://fastly.jsdelivr.net/npm/@descope/user-management-widget/dist/index.js"></script>
+<script src="https://static.descope.com/npm/@descope/user-management-widget@0.4.53/dist/index.js"></script>
 
 </body>
 </html>
