--- a/hazards.html
+++ b/hazards.html
@@ -6,9 +6,9 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <link href="images/icons/favicon.svg" rel="shortcut icon">
 
-    <title>Switchers.ai | Impacts</title>
+    <title>Switchers.ai | Hazardous</title>
 
-    <meta property="og:title" content="Switchers.ai | Impacts"/>
+    <meta property="og:title" content="Switchers.ai | Hazardous"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg"/>
 
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://fastly.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/main_view.css">
-    <link rel="stylesheet" href="css/outliers.css">
+    <link rel="stylesheet" href="css/hazards.css">
 </head>
 
 <body class="body-background-dark">
@@ -32,44 +32,14 @@
 
         <div class="collapse navbar-collapse" id="switchers-navbar">
             <div class="navbar-nav">
-                <button type="button" class="btn btn-sm text-white m-1" id="settings-nav-btn"
-                        data-target="settings"
-                        data-toggle="tooltip"
-                        data-placement="bottom" title="Settings">
-                    <i class="bi bi-gear"></i>
-                    Settings
-                </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="net-nav-btn"
-                        data-target="net"
-                        data-toggle="tooltip"
-                        data-placement="bottom" title="Net">
-                    <i class="bi bi-speedometer2"></i>
-                    Net
-                </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn"
-                        data-target="questions"
-                        data-toggle="tooltip" data-placement="bottom" title="Questions">
-                    <i class="bi bi-pie-chart"></i>
-                    Questions
-                </button>
-                <button type="button" class="btn btn-sm bg-primary text-white m-1" id="impacts-nav-btn"
-                        data-target="outliers"
-                        data-toggle="tooltip" data-placement="bottom" title="Impacts">
-                    <i class="bi bi-clipboard-data text-success"></i>
-                    Impacts
-                </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
-                        data-target="icebergs"
-                        data-toggle="tooltip" data-placement="bottom" title="Hazardous">
-                    <i class="bi bi-exclamation-triangle text-danger"></i>
-                    Hazardous
-                </button>
             </div>
         </div>
 
         <!-- POV STATUS -->
         <div class="ml-2 mr-5 text-white">
             <strong class="">POV: </strong><span id="pov-value"></span>
+            <br>
+            <strong class="" id="filter-value">Filter: </strong><span id="filter-name"></span>
         </div>
         <!-- END OF POV STATUS -->
 
@@ -106,8 +76,8 @@
 
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">Hi <span class="text-primary" id="user-name"></span> !</h4>
-                        <i class="bi bi-chat-text"></i>
+                        <h4 class="modal-title">Hi <span class="text-primary" id="user-name"></span>!</h4>
+<!--                        <i class="bi bi-chat-text"></i>-->
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
 
@@ -115,8 +85,7 @@
                     <div class="modal-body justify-content-center">
                         <div class="row align-items-center">
                             <div class="col">
-                                <h6>Hope you had a great experience using <span class="text-primary">Switchers AI</span>
-                                </h6>
+                                <h6>Hope you had a great experience using <span class="text-primary">Switchers AI</span></h6>
                             </div>
                         </div>
                         <div class="row">
@@ -126,10 +95,8 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" id="logout-button">Log Out <i
-                                class="bi bi-box-arrow-right"></i></button>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close <i
-                                class="bi bi-arrow-return-left"></i></button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal" id="logout-button">Log Out <i class="bi bi-box-arrow-right"></i></button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close <i class="bi bi-arrow-return-left"></i></button>
                     </div>
                 </div>
             </div>
@@ -147,12 +114,9 @@
                         <!-- Flexbox container with vertical layout -->
                         <div class="scrollable-container d-flex flex-column">
                             <!-- Change order based on screen size -->
-                            <div id="additional-text-container"
-                                 class="additional-text-container question-transition order-3 order-md-1"></div>
-                            <hr id="additional-text-divider" style="display: none;"
-                                class="hr order-2 order-md-2 bg-dark"/>
-                            <div id="questions-list-wrapper"
-                                 class="scrollable-container question-transition order-1 order-md-3">
+                            <div id="additional-text-container" class="additional-text-container question-transition order-3 order-md-1"></div>
+                            <hr id="additional-text-divider" style="display: none;" class="hr order-2 order-md-2 bg-dark"/>
+                            <div id="questions-list-wrapper" class="scrollable-container question-transition order-1 order-md-3">
                                 <div class="list-group" id="questions-list">
                                     <!-- Clickable list items will be appended here dynamically -->
                                 </div>
@@ -165,7 +129,7 @@
                             <div class="card bg-dark d-flex justify-content-center">
                                 <div class="row p-2 align-items-center">
                                     <div class="col-md-4 col-sm-4 col-xs-4">
-                                        <h3 class="text-white">Impacts Data</h3>
+                                        <h3 class="text-white">Hazardous Data</h3>
                                     </div>
                                     <div class="col-md-4 col-sm-4 col-xs-4 d-flex justify-content-end">
                                         <!-- Use flexbox to space out buttons -->
@@ -177,6 +141,9 @@
                                         </button>
                                         <button type="button" class="btn btn-secondary sensitivity-level-button"
                                                 data-level="low">Low
+                                        </button>
+                                        <button type="button" class="btn btn-secondary sensitivity-level-button"
+                                                data-level="switchers">Switchers
                                         </button>
                                     </div>
                                     <div class="col-md-4 col-sm-4 col-xs-4 text-right">
@@ -263,10 +230,10 @@
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
+<script src="js/pub_env.js" type="text/javascript"></script>
 <script src="js/template.js" type="text/javascript"></script>
 <script src="js/auth.js" type="text/javascript"></script>
-
 <script src="js/googleChart.js" type="text/javascript"></script>
-<script src="js/outliers.js" type="text/javascript"></script>
+<script src="js/hazards.js" type="text/javascript"></script>
 </body>
 </html>
