--- a/login.html
+++ b/login.html
@@ -44,9 +44,10 @@
 <script crossorigin="anonymous" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
         type="text/javascript"></script>
 
-
 <script src="https://unpkg.com/@descope/web-js-sdk@x.x.x/dist/index.umd.js"></script>
 <script src="https://unpkg.com/@descope/web-component@x.x.x/dist/index.js"></script>
+
+<script src="js/pub_env.js" type="text/javascript"></script>
 <script src="js/template.js" type="text/javascript"></script>
 <script src="js/login.js" type="text/javascript"></script>
 
