--- a/settings.html
+++ b/settings.html
@@ -39,44 +39,14 @@
 
         <div class="collapse navbar-collapse" id="switchers-navbar">
             <div class="navbar-nav">
-                <button type="button" class="btn btn-sm bg-primary text-white m-1" id="settings-nav-btn"
-                        data-target="settings"
-                        data-toggle="tooltip"
-                        data-placement="bottom" title="Settings">
-                    <i class="bi bi-gear"></i>
-                    Settings
-                </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="net-nav-btn"
-                        data-target="net"
-                        data-toggle="tooltip"
-                        data-placement="bottom" title="Net">
-                    <i class="bi bi-speedometer2"></i>
-                    Net
-                </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn"
-                        data-target="questions"
-                        data-toggle="tooltip" data-placement="bottom" title="Questions">
-                    <i class="bi bi-pie-chart"></i>
-                    Questions
-                </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="impacts-nav-btn"
-                        data-target="outliers"
-                        data-toggle="tooltip" data-placement="bottom" title="Impacts">
-                    <i class="bi bi-clipboard-data text-success"></i>
-                    Impacts
-                </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
-                        data-target="icebergs"
-                        data-toggle="tooltip" data-placement="bottom" title="Hazardous">
-                    <i class="bi bi-exclamation-triangle text-danger"></i>
-                    Hazardous
-                </button>
             </div>
         </div>
 
         <!-- POV STATUS -->
         <div class="ml-2 mr-5 text-white">
             <strong class="">POV: </strong><span id="pov-value"></span>
+            <br>
+            <strong class="" id="filter-value">Filter: </strong><span id="filter-name"></span>
         </div>
         <!-- END OF POV STATUS -->
 
@@ -114,8 +84,8 @@
 
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">Hi <span class="text-primary" id="user-name"></span> !</h4>
-                        <i class="bi bi-chat-text"></i>
+                        <h4 class="modal-title">Hi <span class="text-primary" id="user-name"></span>!</h4>
+<!--                        <i class="bi bi-chat-text"></i>-->
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
 
@@ -166,6 +136,8 @@
                                 <button id="save-settings">Save</button>
                             </div>
                         </div>
+
+                        <div id="pov-data"></div>
                     </div>
                     <div id="user-management-container" class="col-md-9 col-sm-12" style="display: none">
                         <div class="row mt-3 mb-2">
@@ -218,11 +190,12 @@
         type="text/javascript"></script>
 
 <script src="https://fastly.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="js/pub_env.js" type="text/javascript"></script>
 <script src="js/template.js"></script>
 <script src="js/auth.js"></script>
 <script src="js/settings.js"></script>
 
-<script src="https://fastly.jsdelivr.net/npm/@descope/user-management-widget/dist/index.js"></script>
+<script src="https://static.descope.com/npm/@descope/user-management-widget@0.4.53/dist/index.js"></script>
 
 </body>
 </html>
