--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
 <script src="https://unpkg.com/@descope/web-js-sdk@x.x.x/dist/index.umd.js"></script>
 
-<script src="js/pub_env.js" type="text/javascript"></script>
-<script src="js/auth.js" type="text/javascript"></script>
+<script>
+    window.location.replace("net");
+</script>
 </body>
 </html>
