--- a/filters.html
+++ b/filters.html
@@ -153,8 +153,8 @@
 
                             <form class="form-inline">
                                 <div class="form-group mb-2">
-                                    <label for="filter-name" class="sr-only text-white">Filter Name:</label>
-                                    <input type="text" class="form-control" id="filter-name"
+                                    <label for="new-filter-name" class="sr-only text-white">Filter Name:</label>
+                                    <input type="text" class="form-control" id="new-filter-name"
                                            placeholder="Enter filter name">
                                 </div>
                                 <div id="logic-group" class="form-group mx-sm-3 mt-2 mb-2">
