--- a/node_bu/public/filters.html
+++ b/node_bu/public/filters.html
@@ -46,7 +46,7 @@
         <div class="ml-2 mr-5 text-white">
             <strong class="">POV: </strong><span id="pov-value"></span>
             <br>
-            <strong class="" id="filter-value">Filter: </strong><span id="header-filter-name"></span>
+            <strong class="" id="filter-value">Filter: </strong><span id="filter-name"></span>
         </div>
         <!-- END OF POV STATUS -->
 
